--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -9,8 +9,8 @@
 <h1>Event Registration</h1>
 <form id="regForm" action="#" method="post">
 <label>Name: <input type="text" name="name" required></label><br>
-<label>Email: <input type="email" name="email" required></label><br>
-<label>Phone: <input type="tel" name="phone" required></label><br>
+<label>Email_id: <input type="email" name="email" required></label><br>
+<label>Phonenumber : <input type="tel" name="phone" required></label><br>
 <button type="submit">Register</button>
 </form>
 </body>
